# CPP2-eindopdracht

./: CMakeLists.txt  README.md
machiavelli/: CMakeLists.txt
machiavelli/include/: util.hpp
machiavelli/include/machiavelli/: *cards.hpp  *states.hpp  Context.hpp  Game.hpp  InputHandler.hpp  MachiavelliData.hpp  util.hpp
machiavelli/include/machiavelli/cards/: BuildingCard.hpp  CharacterCard.hpp  Hand.hpp
machiavelli/include/machiavelli/io/: IO.hpp
machiavelli/include/machiavelli/objects/: BuildingCard.hpp  CharacterCard.hpp
machiavelli/include/machiavelli/parse/: Parse.hpp
machiavelli/include/machiavelli/parser/: Parser.hpp
machiavelli/include/machiavelli/player/: GameData.hpp
machiavelli/include/machiavelli/states/: ActionState.hpp  BaseState.hpp  CharacterCardPickingState.hpp  IdleState.hpp  LobbyState.hpp  OptionState.hpp
machiavelli/layouts/: karakterkaarten.csv
machiavelli/src/: main.cpp
machiavelli/src/machiavelli/: Game.cpp  InputHandler.cpp  main.cpp
machiavelli/src/machiavelli/Parse/: Parse.cpp
machiavelli/src/machiavelli/io/: IO.cpp
machiavelli/src/machiavelli/parser/: Parser.cpp  parser.cpp
machiavelli/src/machiavelli/states/: ActionState.cpp  BaseState.cpp  CharacterCardPickingState.cpp  IdleState.cpp  LobbyState.cpp  OptionState.cpp
server/: CMakeLists.txt
server/include/: *server.hpp  _server.hpp  server.hpp
server/include/server/: *command.hpp  *connection.hpp  *input.hpp  *player.hpp  CircularBuffer.hpp  ClientCommand.hpp  ClientInfo.hpp  ClientRegistry.hpp  PlayerData.hpp  Server.hpp  ServerCallbackHandler.hpp  Socket.hpp  _command.hpp  _player.hpp  throw.hpp
server/include/server/command/: *options.hpp  ClientCommand.hpp  Command.hpp  Commands.hpp  ServerCommand.hpp  _validation.hpp
server/include/server/command/options/: OptionHandler.hpp
server/include/server/command/validation/: Validators.hpp
server/include/server/connection/: CircularBuffer.hpp  ClientInfo.hpp  Player.hpp  Socket.hpp  Sync_queue.hpp
server/include/server/input/: Command.hpp
server/include/server/player/: *state.hpp  Player.hpp  PlayerData.hpp
server/include/server/player/state/: State.hpp  StateMachine.hpp
server/include/server/state/: State.h  StateMachine.h  StateMachine.hpp
server/src/server/: ClientRegistry.cpp  Player.cpp  Server.cpp  ServerBuilder.cpp  Socket.cpp  throw.cpp
server/src/server/connection/: Socket.cpp
